# spot-ambience

./: .gitignore  ABOUT.md  CHANGELOG.md  CMakeLists.txt  NOTICE.md  PRIVACY.md  README.md  harbour-spotambience.desktop
docs/: DATA-SOURCE.md
qml/: harbour-spotambience.qml
qml/cover/: CoverPage.qml
qml/pages/: AboutPage.qml  AmbiencePickerPage.qml  AppPullDownMenu.qml  GraphPage.qml  HourlyPriceRow.qml  HourlyPriceTable.qml  MainPage.qml  PageNavigationRow.qml  PriceTableHeader.qml  PriceTablePage.qml  SettingsPage.qml
release/: harbour-spotambience-1.0.0-1.aarch64.rpm  harbour-spotambience-1.0.0-1.armv7hl.rpm  harbour-spotambience-1.0.0-1.i486.rpm
rpm/: harbour-spotambience.changes  harbour-spotambience.spec  harbour-spotambience.yaml
src/: ambienceinventory.cpp  ambienceinventory.h  appconfig.cpp  appconfig.h  automationdbus.cpp  automationdbus.h  automationrunner.cpp  automationrunner.h  main.cpp  pricechartitem.cpp  pricechartitem.h  pricedata.cpp  pricedata.h  pricestore.cpp  pricestore.h  spotcontroller.cpp  spotcontroller.h  timedscheduler.cpp  timedscheduler.h
tests/: test_core.cpp
